ArjutaJTS/jts: make it running on WildFly

--- a/ArjunaJTS/jts/application-component-1/src/main/webapp/addCustomer.xhtml
+++ b/ArjunaJTS/jts/application-component-1/src/main/webapp/addCustomer.xhtml
@@ -21,7 +21,7 @@
 	<ui:define name="content">
 		<h:messages />
 		#{customerManager.addCustomer()}
-		<h:outputText value="#{customerManager.getTime()}" />
+		<h:outputText value="#{customerManager.time}" />
 	</ui:define>
 </ui:composition>
 </html>
