--- a/ArjunaJTS/jts/application-component-1/src/main/webapp/done.xhtml
+++ b/ArjunaJTS/jts/application-component-1/src/main/webapp/done.xhtml
@@ -19,7 +19,7 @@
 
 <ui:composition template="template.xhtml">
 	<ui:define name="content">
-		<h:outputText value="#{customerManager.getTime}" />
+		<h:outputText value="#{customerManager.time}" />
 	</ui:define>
 </ui:composition>
 </html>
