JBTM-3699 Migrate REST-AT quickstarts to Jakarta EE namespace

--- a/rts/at/service/service1b/src/main/webapp/index.html
+++ b/rts/at/service/service1b/src/main/webapp/index.html
@@ -18,15 +18,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>helloworld-rs</title>
+<title>REST-AT Participant Example</title>
 </head>
 <body>
-
-    <p>Choose between <em>JSON</em> or <em>XML</em>:
-
-    <ul>
-    	<li><a href="rest/json">JSON</a></li>
-        <li><a href="rest/xml">XML</a></li>
-    </ul>
+    <p>TODO http://localhost:8080/service1b/service/query 404
 </body>
 </html>
